--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#ad0303"
+  "theme_color": "#ff5252"
 }
